Working on Final Paper 698

--- a/data698/data/Test.Rmd
+++ b/data698/data/Test.Rmd
@@ -17,7 +17,7 @@ library(leaflet)
 library(sf)
 library(tidyverse)
 library(dplyr)
-
+library(plotly)
 districts <- read_sf('schooldistricts.geojson')
 districts$school_dist  <- as.numeric(districts$school_dist)
 
